apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
.card-destination-container {
	position: relative;
	border-radius: 1rem;
}

img {
	border-radius: 16px;
	height: 18.75rem;
	width: 18.75rem;
}

.view-button {
	position: absolute;
	right: 0.5rem;
	top: 0.5rem;
}

.card-destination-information {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	padding: 0 .875rem;
	padding-top: 1.0rem;
	padding-bottom: 1.375rem;
	position: absolute;
	bottom: 0;
	width: 100%;
	background-color: rgb(255 255 255 / 40%);
	backdrop-filter: blur(.75rem);
	border-bottom-left-radius: 1rem;
	border-bottom-right-radius: 1rem;
	min-height: 5rem;
}

.destination-name {
	color: var(--primary-text-value);
}

.card-buttons-container {
	display: flex;
	flex-direction: row;
	gap: .3125rem;
	justify-content: end;
}

